# semic

./: .gitignore  Cargo.toml  README.md
examples/: args.cmm  args.semic  array.cmm  assign.cmm  blocks.semic  call.cmm  call.semic  checker_error.cmm  fib.semic  final.cmm  final.semic  float.semic  for.cmm  global.semic  if.cmm  parse_error.cmm  parse_error.semic  printf.semic  prog.cmm  ptr.semic  runtime_error.cmm  scopes.semic  while.cmm
src/: ast.rs  cmm.lalrpop  cmm.rs  main.rs  parser.lalrpop
src/cmm/: analyzer.rs  ast.rs  checker.rs  engine.rs  env.rs  environment.rs  error.rs  lib.rs  parser.lalrpop  repl.rs  util.rs
src/semic/: ast.rs  checker.rs  engine.rs  env.rs  lib.rs  parser.lalrpop  repl.rs
tests/: parser.rs  test.rs
tests/checker/: mod.rs  prog.rs
tests/engine/: expr.rs  mod.rs  prog.rs  stmt.rs
tests/env/: mod.rs  symtab.rs
tests/parser/: expr.rs  func.rs  mod.rs  prog.rs  stmt.rs
