[package]
name = "semic-interp"
version = "0.1.0"
authors = ["Markus Faerevaag <m@frv.ag>"]
build = "build.rs"

[lib]
name = "semic"
path = "src/semic/lib.rs"

[[bin]]
name = "semic-interp"
path = "src/main.rs"

[build-dependencies]
lalrpop = "0.13.1"

[dependencies]
getopts = "0.2"
lalrpop-util = "0.13.1"
regex = "0.2.1"